Ensure URL tests works under Windows and Linux